[project]
name = "ai-x-post"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Miyajima Yuya", email = "miyagit777@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.96.0",
    "feedparser>=6.0.12",
    "tweepy>=4.16.0",
]

[project.scripts]
ai-x-post = "ai_x_post:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
